Fixed the vertical alignment of the Overview section. Added a dark gradient filter and title over the project pages. Cleaned up the code, removing unnecessary, commented out code.

--- a/styles/main.css
+++ b/styles/main.css
@@ -98,11 +98,6 @@ input {
 
 
 /*** Common Classes ***/
-/* 
-.logo:focus, .nav-item:focus {
-    border: none;
-    text-decoration: underline;
-} */
 
 .section-title {
     margin: 0 auto 30px;
@@ -302,9 +297,6 @@ input {
 
 /* Recent Work Section */
 
-/* .project-name {
-} */
-
 .recent-work-card {
     display: flex;
     flex-direction: row;
@@ -380,13 +372,38 @@ input {
 /*** Banner ***/
 
 .project-banner {
+    display: flex;
+    position: relative;
     margin-top: 5%;
     margin-bottom: 5%;
+    width: 100%;
+    height: 50vh;
+    text-align: center;
+}
+
+.proj-title {
+    margin: auto;
+    font-weight: 600;
+    font-size: 3.375rem;
+    color: var(--light);
+    text-transform: uppercase;
 }
 
 .proj-banner-img {
+    position: absolute;
     width: 100%;
     height: 50vh;
+    z-index: -1;
+}
+
+.proj-banner-img::before {
+    content: '';
+    display: block;
+    position: absolute;
+    background: #22222200;
+    background: linear-gradient(20deg, #222222ff, #22222244 80%, #22222200);
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -398,7 +415,6 @@ input {
     flex-wrap: wrap;
     margin: 5vw auto 0;
     padding: var(--padding-clamp);
-    align-items: center;
 }
 
 .proj-grid-block {
@@ -520,9 +536,6 @@ input {
 only screen and (max-width: 870px) {
 
     /*** Common ***/
-    /* .section-title {
-        max-width: 490px;
-    } */
 
     .section-title > h1 {
         font-size: clamp(1.5rem, 5vw, 2rem);
@@ -610,8 +623,6 @@ only screen and (max-width: 870px) {
     /****** Project Pages ******/
 
     /*** Grid Section ***/
-
-    
 
     .proj-grid-block {
         padding-right: min(20px, .5vw);
